Fixed color contrast

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,10 @@ header a {
   color: black;
 }
 
+.price {
+  text-align: center;
+}
+
 .siteName {
 	font-size: 25px;
   }
@@ -24,6 +28,14 @@ header a {
 .stuff li {
   text-decoration: none;
 }
+
+img {
+  display: block; /* Make the image a block element */
+  margin: 0 auto; /* Center the image horizontally */
+  max-width: 100%; /* Make sure the image doesn't exceed its container's width */
+  height: auto; /* Maintain the aspect ratio of the image */
+}
+
 
 nav {
   background-color: #333; /* Background color */
@@ -53,7 +65,7 @@ nav a {
   color: #fff; /* Text color for links */
   padding: 5px 10px; /* Padding for each link */
   border-radius: 5px; /* Rounded corners */
-  background-color: grey; /* Background color for links */
+  background-color: #727073; /* Background color for links */
   margin-top: 10px; /* Adjusted top margin for spacing between links */
 }
 
@@ -241,7 +253,6 @@ button[type="submit"]:hover {
 
 span {
   display: block;
-  font-size: 12px;
   margin-bottom: 10px;
 }
 
@@ -346,6 +357,10 @@ h2, h1 {
 
   #hero {
     grid-column: 1/5;
+  }
+
+  nav a {
+    background-color: #333;
   }
 
   ul {
